Added Airbnb clone project link

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
             <div class="slide slide--2 make-blur">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  Ecommerce Webiste
+                  Airbnc Clone
                 </h5>
                 <blockquote class="testimonial__text">
-                  A fully fucntional Ecommerce website where sellers can sell and buyers can but with complete database  and authentication fucntionality too.
+                  A fully functional Airbnb clone with booking, accomodation , viewing functionalities.
                 </blockquote>
                 <div class="githublink">
                   <h6 class="testimonial__name"><i class="fa-brands fa-github"></i></h6>
-                  <p class="testimonial__location"><a href="https://github.com/siva-github-70957/merntodo">Github</a></p>
+                  <p class="testimonial__location"><a href="https://github.com/siva-github-70957/airbnbClone">Github</a></p>
                   <div class="linee"></div>
                 </div>
               </div>
