--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="slide slide--2 make-blur">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  Airbnc Clone
+                  Airbnb Clone
                 </h5>
                 <blockquote class="testimonial__text">
                   A fully functional Airbnb clone with booking, accomodation , viewing functionalities.
