--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Bungee+Inline&family=Caveat&family=Italianno&family=NTR&family=Poiret+One&family=Press+Start+2P&family=Tourney:wght@300&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Siva Prasad</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
