updated project details

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="greetdetails">
                 <h3>Hi , <label>Hello</label></h3>
                 <div class="heach1">
-                    <h1>I'm a</h1>
+                    <h1>You Found</h1>
                     <span>Full Stack Developer</span>
                 </div>
                 <div class="social-media">
@@ -170,14 +170,14 @@
             <div class="slide slide--3 make-blur">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  Bank Webiste(clone)
+                  Ecommerce
                 </h5>
                 <blockquote class="testimonial__text">
-                  Project details here 
+                  A fully functional ecommerce website ....
                 </blockquote>
                 <div class="githublink">
                   <h6 class="testimonial__name"><i class="fa-brands fa-github"></i></h6>
-                  <p class="testimonial__location"><a href="https://github.com/siva-github-70957/merntodo">Github</a></p>
+                  <p class="testimonial__location"><a href="https://github.com/siva-github-70957?tab=repositories">Github</a></p>
                   <div class="linee"></div>
                 </div>
               </div>
