No major changes

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Bungee+Inline&family=Caveat&family=Italianno&family=NTR&family=Poiret+One&family=Press+Start+2P&family=Tourney:wght@300&display=swap" rel="stylesheet">
-    <title>Siva Prasad</title>
+    <title>PortFolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <div class="navbar">
             <div class="logo">
-                <span>Namasthe</span>
+                <span>Namasthe..</span>
             </div>
             <div class="unorderlist">
                 <ul>
@@ -30,7 +30,7 @@
             <div class="greetdetails">
                 <h3>Hi , <label>Hello</label></h3>
                 <div class="heach1">
-                    <h1>You Found</h1>
+                    <h1>I'm a</h1>
                     <span>Full Stack Developer</span>
                 </div>
                 <div class="social-media">
